--- a/public/css/titulo.css
+++ b/public/css/titulo.css
@@ -1,3 +1,11 @@
 .marginbottom25 {
     margin-bottom: 25px;
 }
+
+.paddingtop25 {
+    padding-top: 25px;
+}
+
+.paddingbottom25 {
+    padding-bottom: 25px;
+}
