--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="css/card.css">
     <link rel="stylesheet" href="css/titulo.css">
   </head>
-  <body>
+  <body onload="iniciaTela()">
       <div class="container-fluid text-center">
-          <h1>Mercado Descentralizado</h1>
+          <h1 class="text-white bg-dark paddingtop25 paddingbottom25" >Mercado Descentralizado</h1>
           <h3 class="marginbottom25">Jogo sobre Cripto Ativos</h3>
           <div class="marginbottom25">
-              <button id="btnBumpDump" onclick="pegaCard()">Bump ou Dump</button>
+              <button class="btn-lg btn-primary" id="btnBumpDump" onclick="pegaCard()">Bump ou Dump</button>
           </div>
           <div id="aguarde" class="spinnerbumpdump spinner-grow spinner-grow-lg text-primary"></div>
           <div id="cardbump" class="card cartaobumpdump text-white bg-success">            
@@ -33,6 +33,20 @@
             </div>
             <div class="card-footer">Pague 50</div>
           </div>
+          <div class="marginbottom25">
+            <hr>
+          </div>
+          <div class="marginbottom25">
+            <button class="btn-lg btn-primary" id="btnBuscarHash" onclick="pegaHash()">Buscar o Hash</button>
+          </div>
+          <div id="aguardehash" class="spinnerbumpdump spinner-grow spinner-grow-lg text-primary"></div>   
+          <div id="cardhash" class="card text-white bg-info">            
+            <div class="card-body">
+              <h4 id="cardhashavance" class="card-title">Avance 8</h4>
+              <p id="cardhashtexto" class="card-text">0xe0fbc4e655f83c52ce255bf9f348dd8745c874f50a576e6ff2dba2393039d992</p>
+            </div>
+            <div id="cardhashbloco" class="card-footer">Bloco 9741741</div>
+          </div>
       </div>
       
     <!-- Optional JavaScript -->
@@ -40,10 +54,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.ethers.io/scripts/ethers-v4.min.js" charset="utf-8" type="text/javascript"></script>
     <script src="js/cards.js"></script>
     <script src="js/card.js"></script>
-    <script>
-        iniciaTela()
-    </script>
+    <script src="js/tela.js"></script>        
+    <script src="js/blockchain.js"></script>
   </body>
 </html>
