--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="pt">
   <head>
-    <title>Mercado Descentralizado</title>
+    <title>Mercado Descentralizado - Jogo sobre Cripto Ativos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="Ferramenta para jogar Mercado Descentralizado, jogo que ensina sobre cripto ativos, hash, mineração e outras peculiaridades sobre Blockchain e cripto ativos ">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/card.css">
