--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -29,9 +29,9 @@
           <div id="carddump" class="card cartaobumpdump text-white bg-danger">            
             <div class="card-body">
               <h4 class="card-title">Dump</h4>
-              <p class="card-text">Você indicou para seu/sua conjuje uma piramide e ela ruiu. Vai ter de reembolsar para salvar o casamento. </p>
+              <p id="carddumpdescricao" class="card-text">Você indicou para seu/sua conjuje uma piramide e ela ruiu. Vai ter de reembolsar para salvar o casamento. </p>
             </div>
-            <div class="card-footer">Pague 50</div>
+            <div id="carddumpvalor" class="card-footer">Pague 50</div>
           </div>
           <div class="marginbottom25">
             <hr>
