new spaces to show private keys

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -16,6 +16,17 @@
           <h1 class="text-white bg-dark paddingtop25 paddingbottom25" >Mercado Descentralizado</h1>
           <h3 class="marginbottom25">Jogo sobre Cripto Ativos</h3>
           <div class="marginbottom25">
+            <button class="btn-lg btn-primary" id="btnGerarConta" onclick="gerarConta()">Gerar Conta Ethereum</button>
+          </div>
+          <div id="aguardegerarconta" class="spinnerbumpdump spinner-grow spinner-grow-lg text-primary"></div>
+          <div id="gerarconta" class="card cartaobumpdump text-white bg-success">            
+            <div class="card-body">
+              <h4 class="card-title">Importar conta no Metamask</h4>
+              <p id="gerarcontadescricao" class="card-text">asdfghjkl0zxcvbnm123qwertyuiop12</p>
+            </div>
+            <div id="cardbumpvalor" class="card-footer">Cole o texto acima</div>
+          </div>
+          <div class="marginbottom25">
               <button class="btn-lg btn-primary" id="btnBumpDump" onclick="pegaCard()">Bump ou Dump</button>
           </div>
           <div id="aguarde" class="spinnerbumpdump spinner-grow spinner-grow-lg text-primary"></div>
