--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -21,10 +21,19 @@
           <div id="aguardegerarconta" class="spinnerbumpdump spinner-grow spinner-grow-lg text-primary"></div>
           <div id="gerarconta" class="card cartaobumpdump text-white bg-success">            
             <div class="card-body">
-              <h4 class="card-title">Importar conta no Metamask</h4>
+              <h4 class="card-title">Nova conta no Metamask</h4>
               <p id="gerarcontadescricao" class="card-text">asdfghjkl0zxcvbnm123qwertyuiop12</p>
             </div>
-            <div id="cardbumpvalor" class="card-footer">Cole o texto acima</div>
+            <div class="card-footer">Copie e cole o texto acima na janela importar conta</div>
+            <div>
+              <button class="btn-lg btn-primary" id="btnFecharGerarConta" onclick="fecharGerarConta()">Fechar</button>
+            </div>
+            <div>
+              &nbsp;
+            </div>
+          </div>
+          <div class="marginbottom25">
+            <hr>
           </div>
           <div class="marginbottom25">
               <button class="btn-lg btn-primary" id="btnBumpDump" onclick="pegaCard()">Bump ou Dump</button>
@@ -62,12 +71,13 @@
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.ethers.io/scripts/ethers-v4.min.js" charset="utf-8" type="text/javascript"></script>
     <script src="js/cards.js"></script>
     <script src="js/card.js"></script>
+    <script src="js/accounts.js"></script>
     <script src="js/tela.js"></script>        
     <script src="js/blockchain.js"></script>
   </body>
